<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UnofficialTuentiWidget</string>
    <string name="tu_user_string">user</string>
    <string name="tu_password_string">password</string>
    <string name="tu_datamoney_string">0 €</string>
    <string name="tu_datamegas_string">0 MB</string>
    <string name="tu_datamin_string">0m</string>
    <string name="tu_datadays_string">0d</string>


    <string name="configure">Configure</string>
    <string name="user">user: </string>
    <string name="password">password: </string>
    <string name="create_widget">Create widget\n(It takes 20s aprox)</string>
    <string name="data_not_found">Data\nnot\nfound</string>
    <string name="nobundle">!Bundle</string>
    <string name="add_bundle_price_cb">Monthly bundle price: </string>
    <string name="vat">VAT</string>
    <string name="loading">oading billing info...</string>
    <string name="postpaid">default postpaid data</string>


</resources>
