<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure"
        android:layout_marginBottom="8dp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/tu_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginBottom="8dp" />

        <EditText
            android:id="@+id/tu_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:password="true"
            android:selectAllOnFocus="true"/>

    </LinearLayout>

    <CheckBox android:id="@+id/checkbox_postpaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postpaid"
        android:onClick="onCheckboxClicked"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tu_bundlePriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bundle_price_cb" />

        <EditText
            android:id="@+id/tu_bundlePriceEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/linearLayout"
        android:layout_gravity="right">

        <TextView
            android:id="@+id/tu_vatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vat" />

        <EditText
            android:id="@+id/tu_vatEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/create_tuentiwidget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_widget"
        android:layout_marginTop="8dp"
        android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>